bugfix and starting css

--- a/css/main.scss
+++ b/css/main.scss
@@ -5,3 +5,13 @@ body {
   margin: 0;
   font-family: "Poppins";
 }
+
+.navbar {
+  background: white;
+  padding: 1em;
+
+  .logo {
+    text-decoration: none;
+    font-weight: bold;
+  }
+}
