--- a/css/main.css
+++ b/css/main.css
@@ -4,4 +4,14 @@ body {
   margin: 0;
   font-family: "Poppins";
 }
+
+.navbar {
+  background: white;
+  padding: 1em;
+}
+
+.navbar .logo {
+  text-decoration: none;
+  font-weight: bold;
+}
 /*# sourceMappingURL=main.css.map */
