--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+:root {
+  --primary-color: #007af3;
+}
+
 body {
   background: #f2f2f2;
   margin: 0;
@@ -13,5 +17,11 @@ body {
 .navbar .logo {
   text-decoration: none;
   font-weight: bold;
+  color: black;
+  font-size: 1.2em;
+}
+
+.navbar .logo span {
+  color: var(--primary-color);
 }
 /*# sourceMappingURL=main.css.map */
