styling mobile nav

--- a/css/main.css
+++ b/css/main.css
@@ -24,4 +24,21 @@ body {
 .navbar .logo span {
   color: var(--primary-color);
 }
+
+.navbar nav {
+  display: none;
+}
+
+.navbar .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.navbar .mobile-menu {
+  cursor: pointer;
+}
 /*# sourceMappingURL=main.css.map */
