--- a/css/main.scss
+++ b/css/main.scss
@@ -38,3 +38,21 @@ body {
     cursor: pointer;
   }
 }
+
+a {
+  color: #444444;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+section {
+  padding: 5em 2em;
+}
+
+.hero {
+  text-align: center;
+}
