--- a/css/main.css
+++ b/css/main.css
@@ -41,4 +41,22 @@ body {
 .navbar .mobile-menu {
   cursor: pointer;
 }
+
+a {
+  color: #444444;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+section {
+  padding: 5em 2em;
+}
+
+.hero {
+  text-align: center;
+}
 /*# sourceMappingURL=main.css.map */
