styling watch-video and img

--- a/css/main.css
+++ b/css/main.css
@@ -83,4 +83,18 @@ section {
   font-weight: bold;
   display: inline-block;
 }
+
+.left-col .watch-video-cta {
+  display: block;
+  margin-top: 1em;
+}
+
+.left-col .watch-video-cta img {
+  margin-right: 0.5em;
+}
+
+.hero-img {
+  width: 70%;
+  margin-top: 3em;
+}
 /*# sourceMappingURL=main.css.map */
