--- a/css/main.scss
+++ b/css/main.scss
@@ -81,4 +81,18 @@ section {
     font-weight: bold;
     display: inline-block;
   }
+
+  .watch-video-cta {
+    display: block;
+    margin-top: 1em;
+
+    img {
+      margin-right: 0.5em;
+    }
+  }
+}
+
+.hero-img {
+  width: 70%;
+  margin-top: 3em;
 }
