--- a/css/main.css
+++ b/css/main.css
@@ -125,4 +125,29 @@ ul.features-list li:before {
   background-size: contain;
   margin-right: 0.5em;
 }
+
+.features-section img {
+  display: none;
+}
+
+.testimonials-section {
+  background: var(--primary-color);
+}
+
+.testimonials-section li {
+  background: #006bd6;
+  text-align: center;
+  padding: 2em 1em;
+  width: 80%;
+  margin: 0 auto 5em auto;
+  border-radius: 1em;
+}
+
+.testimonials-section li img {
+  width: 5em;
+  height: 5em;
+  border: 5px solid #006bd6;
+  border-radius: 50%;
+  margin-top: -4.5em;
+}
 /*# sourceMappingURL=main.css.map */
