--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@ ul.features-list li:before {
 
 .testimonials-section {
   background: var(--primary-color);
+  color: white;
 }
 
 .testimonials-section li {
@@ -149,5 +150,26 @@ ul.features-list li:before {
   border: 5px solid #006bd6;
   border-radius: 50%;
   margin-top: -4.5em;
+}
+
+h2 {
+  font-size: 2em;
+}
+
+label {
+  display: block;
+  font-size: 1.2em;
+  margin-bottom: 0.5em;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 0.8em;
+  margin-bottom: 1em;
+  border-radius: 0.3em;
+  border: 1px solid grey;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 /*# sourceMappingURL=main.css.map */
