--- a/css/main.scss
+++ b/css/main.scss
@@ -132,6 +132,7 @@ ul.features-list {
 
 .testimonials-section {
   background: var(--primary-color);
+  color: white;
 
   li {
     background: #006bd6;
@@ -149,4 +150,24 @@ ul.features-list {
       margin-top: -4.5em;
     }
   }
+}
+
+h2 {
+  font-size: 2em;
+}
+
+label {
+  display: block;
+  font-size: 1.2em;
+  margin-bottom: 0.5em;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 0.8em;
+  margin-bottom: 1em;
+  border-radius: 0.3em;
+  border: 1px solid grey;
+  box-sizing: border-box;
 }
