--- a/css/main.css
+++ b/css/main.css
@@ -172,4 +172,23 @@ textarea {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+input[type="submit"] {
+  background-color: var(--primary-color);
+  color: white;
+  font-weight: bold;
+  font-size: 1.3em;
+  border: none;
+  margin-bottom: 5em;
+  border-radius: 5em;
+  display: inline-block;
+  padding: 0.8em 2em;
+  width: unset;
+  cursor: pointer;
+}
+
+iframe {
+  width: 100%;
+  height: 300px;
+}
 /*# sourceMappingURL=main.css.map */
