--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ body {
 }
 
 .navbar nav {
-  display: none;
+  /*  display: none; */
 }
 
 .navbar .container {
@@ -190,5 +190,37 @@ input[type="submit"] {
 iframe {
   width: 100%;
   height: 300px;
+}
+
+nav.menu-btn {
+  display: block;
+}
+
+nav {
+  position: fixed;
+  z-index: 999;
+  width: 66%;
+  right: 0;
+  top: 0;
+  background: #20272e;
+  height: 100vh;
+  padding: 1em;
+}
+
+nav ul.primary-nav {
+  margin-top: 5em;
+}
+
+nav li a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 0.5em;
+  font-size: 1.3em;
+  text-align: right;
+}
+
+nav li a:hover {
+  font-weight: bold;
 }
 /*# sourceMappingURL=main.css.map */
