--- a/css/main.scss
+++ b/css/main.scss
@@ -26,7 +26,7 @@ body {
   }
 
   nav {
-    /*  display: none; */
+    display: none;
   }
 
   .container {
@@ -223,4 +223,10 @@ nav {
       }
     }
   }
+}
+
+.mobile-menu-exit {
+  float: right;
+  margin: 0.5em;
+  cursor: pointer;
 }
