--- a/css/main.scss
+++ b/css/main.scss
@@ -376,3 +376,27 @@ nav {
     }
   }
 }
+
+@media only screen and (min-width: 1450px) {
+  .features-section {
+    &:before {
+      content: "";
+      position: absolute;
+      width: 10%;
+      height: 20em;
+      background: var(--primary-color);
+      left: 0;
+      top: -4em;
+    }
+
+    &:after {
+      content: "";
+      position: absolute;
+      width: 200px;
+      height: 20em;
+      background: url("../images/dots.svg") no-repeat;
+      left: 4.5em;
+      top: 2em;
+    }
+  }
+}
